# cuda_ops

./: .gitignore  .gitmodules  README.md
src/common/FocalLoss/: setup.py  test.py
src/common/FocalLoss/src/: focalloss.cu
src/common/GroupNorm/: setup.py  test.py
src/common/GroupNorm/src/: groupnorm.cu
src/common/Rotary/: setup.py  test.py
src/common/Rotary/src/: rotary.cu
src/gemm_fused/: CMakeLists.txt
src/gemm_fused/gemm_swiglu/: CMakeLists.txt  profiler.py  setup.py  swiglu.py  test.py
src/gemm_fused/gemm_swiglu/src/: custom_combination.h  swiglu.cu
src/gemm_fused/src/: swiglu.cu
src/transport/: CMakeLists.txt  compile.sh  run.sh  setup.py  test.py
src/transport/src/: rdma_tensor_move.cu
